feat: adiciona listagem, ciclo de vida e itens no response