@@ -1,8 +1,11 @@
 package com.example.pedido.presentation.controller;
 
 import com.example.pedido.application.dto.CriarNovoPedidoCommand;
+import com.example.pedido.application.useCase.AtualizarStatusPedidoUseCase;
+import com.example.pedido.application.useCase.BuscarPedidosUseCase;
 import com.example.pedido.application.useCase.CriarNovoPedidoUseCase;
 import com.example.pedido.domain.model.Pedido;
+import com.example.pedido.presentation.dto.AtualizarStatusRequest;
 import com.example.pedido.presentation.dto.CriarNovoPedidoRequest;
 import com.example.pedido.presentation.dto.PedidoResponse;
 import jakarta.validation.Valid;
@@ -10,16 +13,48 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.net.URI;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @RestController
 @RequestMapping("/api/pedidos")
 public class PedidoController {
 
     private final CriarNovoPedidoUseCase criarNovoPedidoUseCase;
+    private final BuscarPedidosUseCase buscarPedidosUseCase;
+    private final AtualizarStatusPedidoUseCase atualizarStatusPedidoUseCase;
 
-    public PedidoController(CriarNovoPedidoUseCase criarNovoPedidoUseCase) {
+    public PedidoController(
+            CriarNovoPedidoUseCase criarNovoPedidoUseCase,
+            BuscarPedidosUseCase buscarPedidosUseCase,
+            AtualizarStatusPedidoUseCase atualizarStatusPedidoUseCase
+    ) {
         this.criarNovoPedidoUseCase = criarNovoPedidoUseCase;
+        this.buscarPedidosUseCase = buscarPedidosUseCase;
+        this.atualizarStatusPedidoUseCase = atualizarStatusPedidoUseCase;
+    }
+
+    @GetMapping
+    public ResponseEntity<List<PedidoResponse>> listarTodos() {
+        List<PedidoResponse> pedidos = buscarPedidosUseCase.buscarTodos().stream()
+                .map(PedidoResponse::from)
+                .toList();
+
+        return ResponseEntity.ok(pedidos);
+    }
+
+    @GetMapping("/{id}")
+    public ResponseEntity<PedidoResponse> buscarPorId(@PathVariable Long id) {
+        Pedido pedido = buscarPedidosUseCase.buscarPorId(id);
+        return ResponseEntity.ok(PedidoResponse.from(pedido));
+    }
+
+    @PatchMapping("/{id}/status")
+    public ResponseEntity<PedidoResponse> atualizarStatus(
+            @PathVariable Long id,
+            @Valid @RequestBody AtualizarStatusRequest request
+    ) {
+        Pedido pedidoAtualizado = atualizarStatusPedidoUseCase.executar(id, request.status());
+        return ResponseEntity.ok(PedidoResponse.from(pedidoAtualizado));
     }
 
     @PostMapping
@@ -31,7 +66,7 @@ public class PedidoController {
                                 item.quantidade(),
                                 item.preco()
                         ))
-                        .collect(Collectors.toList())
+                        .toList()
         );
 
         Pedido pedidoCriado = criarNovoPedidoUseCase.executar(command);
